--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-xl py-2 navbar-light bg-light sticky-top narbar-dark">
-        <a class="navbar-brand" href="index.html" style="font-family: 'Bitter',bold;">Multicultural Heroes</a>
+        <a class="navbar-brand" href="#" style="font-family: 'Bitter',bold;">Multicultural Heroes</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -35,7 +35,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#book">Books</a>
